--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>About  &middot; Aaron&#39;s Blog</title>
+  <title>About me  &middot; Aaron&#39;s Blog</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
@@ -17,7 +17,7 @@
 <meta name="keywords" content="">
 
 
-<meta property="og:title" content="About  &middot; Aaron&#39;s Blog ">
+<meta property="og:title" content="About me  &middot; Aaron&#39;s Blog ">
 <meta property="og:site_name" content="Aaron&#39;s Blog"/>
 <meta property="og:url" content="https://aaronzq.github.io/about/" />
 <meta property="og:locale" content="en-us">
@@ -36,14 +36,14 @@
   {
     "@context": "http://schema.org",
     "@type": "Article",
-    "headline": "About",
+    "headline": "About me",
     "author": {
       "@type": "Person",
       "name": "http://profiles.google.com/+?rel=author"
     },
     "datePublished": "2017-10-23",
     "description": "",
-    "wordCount": 0
+    "wordCount": 1
   }
 </script>
 
@@ -151,13 +151,16 @@
 
 <article id="main-content" class="container main_content single">
   <header class="container hat">
-  <h1>About
+  <h1>About me
 </h1>
 
 </header>
 
   <div class="container content">
   
+
+<h3 id="education">Education</h3>
+
 </div>
 
 
