--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
   <p class="container content">
   
   
-    This morning I get my BananaPi M3. I bought it for a consideration that it may replace RaspberryPi 3B in our application in embedded digital image processing.
+    Take a Look This morning I get my BananaPi M3. I bought it for a consideration that it may replace RaspberryPi 3B in our application in embedded digital image processing. Quate from offical website:
+&gt; Banana Pi M3 is a super charged single board computer with an Octa-core processor and 2GB of RAM. Along side the elite processing unit, it features Gigabit Ethernet, 2 USB, SATA, WiFi, Bluetooth, and HDMI connection.
   
 
 
