--- a/about/index.html
+++ b/about/index.html
@@ -248,8 +248,8 @@ Huazhong University of Science and Technology, Wuhan, China<br />
 <h4 id="international-volunteering">International Volunteering</h4>
 
 <p>I used to work in <a href="https://aiesec.org/"><strong>AIESEC</strong></a> for international volunteering. I learned to be an activity designer there and cooperated with people from people mainly from China and Southeastern Asia. It&rsquo;s a amazing organization! Sometimes when we held regional meeting to discuss about the project proposals, I can feel the boldness and passion of people here. A spirit to stand up and speak out. A spirit to believe an indivisual&rsquo;s ability to make things change. We undertook a program for Chinese folk culture exploration and documenting, during which I met life-long friends. I still remember the time when we drove all the way down the highway to Pattaya. Everything in life is beautiful.<br />
-<img src="./IMG_0302.JPG" alt="Conference" />
-<img src="IMG_0504.JPG" alt="Clay sculpture" /></p>
+<img src="./AIESEC/IMG_0302.JPG" alt="Conference" />
+<img src="./AIESEC/IMG_0504.JPG" alt="Clay sculpture" /></p>
 
 <h4 id="hobbies-and-life">Hobbies and Life</h4>
 
