--- a/about/index.html
+++ b/about/index.html
@@ -172,7 +172,7 @@
 
 <h3 id="zhaoqiang-wang-汪兆强">Zhaoqiang Wang  汪兆强</h3>
 
-<p><img src="./me/IMG_3153.JPG" alt="me" width="200px" height="200px" /><br />
+<p><img src="https://raw.githubusercontent.com/aaronzq/aaronzq.github.io/master/about/me/IMG_3153.JPG" alt="me" width="200px" height="200px" /><br />
 Senior Student<br />
 Huazhong University of Science and Technology, Wuhan, China<br />
 <a href="mailto:zhaoqiangwang@hust.edu.cn">Email</a>: zhaoqiangwang@hust.edu.cn<br />
@@ -190,7 +190,7 @@ Huazhong University of Science and Technology, Wuhan, China<br />
 <!--DOCTYPE html-->
 
 <div class="project">
-    <img src="./LF/Worms.jpg" class="publogo" width="200 px"> 
+    <img src="https://raw.githubusercontent.com/aaronzq/aaronzq.github.io/master/about/LF/Worms.jpg" class="publogo" width="200 px"> 
         <strong>
             3D imaging with Light Field Microscopy and Super-Resolution
         </strong>
@@ -212,7 +212,7 @@ Huazhong University of Science and Technology, Wuhan, China<br />
 <!--DOCTYPE html-->
 
 <div class="project">
-    <img src="./DualSI/System.jpg" class="publogo" width="200 px"> 
+    <img src="https://raw.githubusercontent.com/aaronzq/aaronzq.github.io/master/about/DualSI/System.jpg" class="publogo" width="200 px"> 
         <strong>
             Beam Profile Assessment Based on Lateral Shearing Interference
         </strong>
@@ -231,7 +231,7 @@ Huazhong University of Science and Technology, Wuhan, China<br />
 <h5 id="electronic-design-and-micromouse-team">Electronic Design and Micromouse Team</h5>
 
 <div class="project">
-    <img src="./STI/linemouse.jpg" class="publogo" width="200 px"> 
+    <img src="https://raw.githubusercontent.com/aaronzq/aaronzq.github.io/master/about/STI/linemouse.jpg" class="publogo" width="200 px"> 
         <strong>
             Maze Solver Robot
         </strong>
@@ -248,8 +248,8 @@ Huazhong University of Science and Technology, Wuhan, China<br />
 <h4 id="international-volunteering">International Volunteering</h4>
 
 <p>I used to work in <a href="https://aiesec.org/"><strong>AIESEC</strong></a> for international volunteering. I learned to be an activity designer there and cooperated with people from people mainly from China and Southeastern Asia. It&rsquo;s a amazing organization! Sometimes when we held regional meeting to discuss about the project proposals, I can feel the boldness and passion of people here. A spirit to stand up and speak out. A spirit to believe an indivisual&rsquo;s ability to make things change. We undertook a program for Chinese folk culture exploration and documenting, during which I met life-long friends. I still remember the time when we drove all the way down the highway to Pattaya. Everything in life is beautiful.<br />
-<img src="./AIESEC/IMG_0302.JPG" alt="Conference" />
-<img src="./AIESEC/IMG_0504.JPG" alt="Clay sculpture" /></p>
+<img src="https://raw.githubusercontent.com/aaronzq/aaronzq.github.io/master/about/AIESEC/IMG_0302.JPG" width="267 px">
+<img src="https://raw.githubusercontent.com/aaronzq/aaronzq.github.io/master/about/AIESEC/IMG_0504.JPG" width="300 px"></p>
 
 <h4 id="hobbies-and-life">Hobbies and Life</h4>
 
