--- a/about/index.html
+++ b/about/index.html
@@ -180,7 +180,7 @@ Huazhong University of Science and Technology, Wuhan, China<br />
 
 <h4 id="short-bio">Short Bio</h4>
 
-<p>I am now a undergraduate student in <a href="http://english.hust.edu.cn/">HUST</a>/<a href="http://english.oei.hust.edu.cn/">SOEI</a>, majoring in Opto-elctronic Information Science and Engineering. I am under instruction of Prof.<a href="https://scholar.google.com/citations?user=gZ-U8XEAAAAJ&amp;hl=en">Peng Fei</a> in biophotonics lab, which featured Light Sheet Fluorescence Microscopy and Super-resolution Imaging. While my current research focuses on the development of Light Field Microscopy, I am also a huge fan of electronic design and leader of the Micromouse team in e-club at my college. In my spared time, I enjoyed novels and movies, especially the biography and science fiction. I&rsquo;m in pursuit of a passionate life. Quate from Elon Musk:
+<p>I am now an undergraduate student in <a href="http://english.hust.edu.cn/">HUST</a>/<a href="http://english.oei.hust.edu.cn/">SOEI</a>, majoring in Opto-elctronic Information Science and Engineering. I am under instruction of Prof.<a href="https://scholar.google.com/citations?user=gZ-U8XEAAAAJ&amp;hl=en">Peng Fei</a> in biophotonics lab, which featured Light Sheet Fluorescence Microscopy and Super-resolution Imaging. While my current research focuses on the development of Light Field Microscopy, I am also a huge fan of electronic design and leader of the Micromouse team in e-club at my college. In my spared time, I enjoyed novels and movies, especially the biography and science fiction. I&rsquo;m in pursuit of a passionate life. Quate from Elon Musk:
 <br><br />
 <q><em>I just wanna think about the future, and not being sad.</em></q><br />
 <br></p>
