--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📷</text></svg>">
+
+  <meta name="google-site-verification" content="RMopjnckAN0rcrA3WZifr2D2ijN5aBdz-F7GByxzaoI" />
 </head>
 
 <body>
