update publication and cv

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <p>
-                12/2022 &nbsp Our work on spectral encoding light field tomography has been accepted by <em>Optica</em>. 
+                12/2022 &nbsp Our work on spectral encoding light field tomography has been accepted by <a href="https://opg.optica.org/optica/fulltext.cfm?uri=optica-10-1-62&id=524889">Optica</a>. 
               </p>
               <p>
                 10/2022 &nbsp I am honored to receive the <a href="https://www.amazon.science/latest-news/amazon-and-ucla-announce-fellowship-recipients">Amazon Doctoral Student Fellowship</a> 2022.
@@ -72,7 +72,7 @@
               <img src='images/spectralencoding.jpg' alt="safs_small" width="160" height="160" style="border-style: none">
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://opg.optica.org/optica/upcomingissue.cfm">
+              <a href="https://opg.optica.org/optica/fulltext.cfm?uri=optica-10-1-62&id=524889">
                 <papertitle>Augmented light field tomography through parallel spectral encoding</papertitle>
               </a>
               <br>
