--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <p>I am a Ph.D. Candidate at University of California, Los Angeles, supervised by Prof. <a href="https://www.iopticslab.seas.ucla.edu/">Liang Gao</a> and Prof. <a href="http://www.hsiailab.com/index.html">Tzung Hsiai</a>. I received my Bachelor of Engineering (BEng) degree in 2018 at
                 Huazhong Univerisity of Science and Technology (<a href="http://english.hust.edu.cn/index.htm">HUST</a>), Wuhan, China, mentored by Prof. <a href="https://scholar.google.com/citations?hl=en&user=gZ-U8XEAAAAJ&view_op=list_works&sortby=pubdate">Peng Fei</a>.
               </p>
-              <p>My research focues on computational imaging and high-speed 3D microscopes. I work on optical design and machine learning to address the transient volumetric biological process (e.g. blood blow, neural signals). 
+              <p>My research focuses on computational imaging and high-speed 3D microscopes. I work on optical design and machine learning to address the transient volumetric biological process (e.g. blood blow, neural signals). 
               </p>
               <p style="text-align:center">
                 <a href="mailto:zqwang9@g.ucla.com">Email</a> &nbsp/&nbsp
