--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ES19QFDZGN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'G-ES19QFDZGN');
+  </script>
+
+  
   <title>Zhaoqiang Wang</title>
   
   <meta name="author" content="Jon Barron">
