--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <tr onmouseout="vcd_lfm_stop()" onmouseover="vcd_lfm_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='vcd_lfm_image'><video  width=100% height=100% muted autoplay loop>
+                <div class="two" id='vcd_lfm_image'><video  width=100% height=100% poster="images/vcd_lfm.jpg" muted autoplay loop>
                 <source src="images/heart_beat.mp4" type="video/mp4">
                 Your browser does not support the video tag.
                 </video></div>
