--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:zqwang9@g.ucla.com">Email</a> &nbsp/&nbsp
-                <a href="data/CV_ZhaoqiangWang.pdf">CV</a> &nbsp/&nbsp
+                <!-- <a href="data/CV_ZhaoqiangWang.pdf">CV</a> &nbsp/&nbsp -->
                 <a href="https://scholar.google.com/citations?user=TWAb75AAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/zhaoqiang-wang-52a4a91bb/">Linkedin</a> 
               </p>
