--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <p>
+                01/2024 &nbsp I will attend SPIE Photonics West 2024 and present our recent progress on high speed light field imaging.
+              </p>
+              <p>
+                10/2023 &nbsp I finished my summer internship at Meta Reality Lab working on waveguide eye tracking and LCoS light engine for AR.
+              </p>
+              <p>
                 12/2022 &nbsp Our work on spectral encoding light field tomography has been accepted by <a href="https://opg.optica.org/optica/fulltext.cfm?uri=optica-10-1-62&id=524889">Optica</a>. 
               </p>
               <p>
