--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <p>
-                03/2024 &nbsp We posted the <a href="https://www.biorxiv.org/content/10.1101/2024.03.23.586416v1.abstract">preprint</a> of our new high speed light field microscope.
+                03/2024 &nbsp We posted the <a href="https://www.biorxiv.org/content/10.1101/2024.03.23.586416v1.abstract">preprint</a> of our high speed light field microscope for volumetric voltage imaging, finally! After years of iterations, the system becomes so much different than the <a href="https://spie.org/photonics-west/presentation/Kilohertz-3-D-fluorescent-microscopy-with-light-field-tomography/PC12857-66#_=_">original proposal</a> at the beginning back in 2022. This long journey wouldn't be possible without my supportive collaborators.
               </p>
               <p>
-                10/2023 &nbsp I finished my summer internship as Optical Scientist at <a hred="https://about.meta.com/realitylabs/">Meta Reality Lab</a> working on waveguide eye tracking and LCoS light engine for augmented reality (AR) glasses.
+                10/2023 &nbsp I finished my summer internship as Optical Scientist at <a href="https://about.meta.com/realitylabs/">Meta Reality Lab</a>, Redmond, working on waveguide-based eye tracker and LCoS light engine for augmented reality (AR) glasses. Thanks to my mentors: Jian, Tiffany and Melissa.
               </p>
               <p>
-                12/2022 &nbsp Our work on spectral encoding light field tomography has been accepted by <a href="https://opg.optica.org/optica/fulltext.cfm?uri=optica-10-1-62&id=524889">Optica</a>. 
+                12/2022 &nbsp Our work on spectral encoding light field tomography (light field acquisition in 1D projections) has been accepted by <a href="https://opg.optica.org/optica/fulltext.cfm?uri=optica-10-1-62&id=524889">Optica</a>. 
               </p>
               <p>
                 10/2022 &nbsp I am honored to receive the <a href="https://www.amazon.science/latest-news/amazon-and-ucla-announce-fellowship-recipients">Amazon Doctoral Student Fellowship</a> 2022.
@@ -69,10 +69,10 @@
                 07/2021 &nbsp We developed an imaging strategy to visualize the beating heart and intracardiac blood flow simultaneously in embryonic zebrafish. The work has been published on <a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1009175">PLOS Computational Biology</a>. 
               </p>
               <p>
-                02/2021 &nbsp Our work on deep learning enhanced light-field microscopy has been published on <a href="https://www.nature.com/articles/s41592-021-01058-x">Nature Methods</a>. 
+                02/2021 &nbsp Our work on deep learning enhanced light-field microscopy has been published on <a href="https://www.nature.com/articles/s41592-021-01058-x">Nature Methods</a>. If you check the manuscript Received Date, it says December, 2019.
               </p>
               <p>
-                12/2019 &nbsp I have advanced to Ph.D. Candidacy. 
+                09/2018 &nbsp I started my Ph.D. training at UCLA. 
               </p>
             </td>
           </tr>
@@ -125,7 +125,7 @@
               <em>bioRxiv</em>, 2024
               <p></p>
               <p>
-                We engineered the light field microscopy with dove prisms and anamorphic lens to exceed <strong>kilohertz volumetric frame rate</strong> for fluorescence detection. We demonstrated accurate tracking of blood cells and detection of neural voltage spikes. 
+                We engineered the light field microscopy with dove prisms and anamorphic lens to exceed <strong>kilohertz volumetric frame rate</strong> for fluorescence detection. We demonstrated accurate tracking of blood cells in zebrafish larvae and detection of neural voltage spikes in leech ganglion. 
               </p>
             </td>
           </tr>
@@ -159,7 +159,7 @@
               <em>Optica</em>, 2023
               <p></p>
               <p>
-                We introduced in-plane radon transformation and spectral encoding to the light field photography, which records sub-aperture images in the form of 1D projections. This allows for extremely compressive measurements of light field, high speed, light dataload using 1D sensors.  
+                We introduced in-plane radon transformation and spectral encoding to the light field photography, which can record sub-aperture images in the form of 1D projections. This allows for extremely compressive measurements of light field, high speed, light dataload using 1D sensors.  
               </p>
             </td>
           </tr>
