--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
   <title>Zhaoqiang Wang</title>
   
-  <meta name="author" content="Jon Barron">
+  <meta name="author" content="AW">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -32,11 +32,14 @@
               <p style="text-align:center">
                 <name>Zhaoqiang Wang</name>
               </p>
-              <p>I am a Ph.D. Candidate at University of California, Los Angeles, supervised by Prof. <a href="https://www.iopticslab.seas.ucla.edu/">Liang Gao</a> and Prof. <a href="http://www.hsiailab.com/index.html">Tzung Hsiai</a>. I received my Bachelor of Engineering (BEng) degree in 2018 at
-                Huazhong Univerisity of Science and Technology (<a href="http://english.hust.edu.cn/index.htm">HUST</a>), Wuhan, China, mentored by Prof. <a href="https://scholar.google.com/citations?hl=en&user=gZ-U8XEAAAAJ&view_op=list_works&sortby=pubdate">Peng Fei</a>.
+              <p>I build microscopes to capture the transient 3D processes in living systems - things that are too fast and subtle to be seen with your naked eye or existing cameras. 
               </p>
-              <p>My research focuses on computational imaging and high-speed 3D microscopes. I work on optical design and machine learning to address the transient volumetric biological process (e.g. blood blow, neural signals). 
+              <p>I received my Ph.D. at Univeristy of California, Los Angeles (UCLA) in 2024, advised by Prof. <a href="https://www.iopticslab.seas.ucla.edu/">Liang Gao</a> and Prof. <a href="http://www.hsiailab.com/index.html">Tzung Hsiai</a>. We messed around light field imaging and machine learning to tackle some of the most difficult microscopy challenges, such as 3D mapping of the flowing blood cells inside beating heart (Nat. Methods, 2021) and neural voltage signals within thinking brain (bioRxiv, 2024).
               </p>
+              <p>I did my internship at <a href="https://about.meta.com/realitylabs/">Meta Reality Lab</a>, working on waveguide-based eye tracker and LCoS light engine for augmented reality (AR) glasses. Before that, I worked in Prof. <a href="https://scholar.google.com/citations?hl=en&user=gZ-U8XEAAAAJ&view_op=list_works&sortby=pubdate">Peng Fei</a>'s lab on light sheet fluorescent microscopy as an undergraduate. And before that, I was an amateur surfer, on the internet.
+              </p>
+
+              
               <p style="text-align:center">
                 <a href="mailto:zqwang9@g.ucla.com">Email</a> &nbsp/&nbsp
                 <!-- <a href="data/CV_ZhaoqiangWang.pdf">CV</a> &nbsp/&nbsp -->
@@ -49,40 +52,35 @@
             </td>
           </tr>
         </tbody></table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>News</heading>
-              <p>
-                03/2024 &nbsp We posted the <a href="https://www.biorxiv.org/content/10.1101/2024.03.23.586416v1.abstract">preprint</a> of our high speed light field microscope for volumetric voltage imaging, finally! After years of iterations, the system becomes so much different than the <a href="https://spie.org/photonics-west/presentation/Kilohertz-3-D-fluorescent-microscopy-with-light-field-tomography/PC12857-66#_=_">original proposal</a> at the beginning back in 2022. This long journey wouldn't be possible without my supportive collaborators.
-              </p>
-              <p>
-                10/2023 &nbsp I finished my summer internship as Optical Scientist at <a href="https://about.meta.com/realitylabs/">Meta Reality Lab</a>, Redmond, working on waveguide-based eye tracker and LCoS light engine for augmented reality (AR) glasses. Thanks to my mentors: Jian, Tiffany and Melissa.
-              </p>
-              <p>
-                12/2022 &nbsp Our work on spectral encoding light field tomography (light field acquisition in 1D projections) has been accepted by <a href="https://opg.optica.org/optica/fulltext.cfm?uri=optica-10-1-62&id=524889">Optica</a>. 
-              </p>
-              <p>
-                10/2022 &nbsp I am honored to receive the <a href="https://www.amazon.science/latest-news/amazon-and-ucla-announce-fellowship-recipients">Amazon Doctoral Student Fellowship</a> 2022.
-              </p>
-              <p>
-                07/2021 &nbsp We developed an imaging strategy to visualize the beating heart and intracardiac blood flow simultaneously in embryonic zebrafish. The work has been published on <a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1009175">PLOS Computational Biology</a>. 
-              </p>
-              <p>
-                02/2021 &nbsp Our work on deep learning enhanced light-field microscopy has been published on <a href="https://www.nature.com/articles/s41592-021-01058-x">Nature Methods</a>. If you check the manuscript Received Date, it says December, 2019.
-              </p>
-              <p>
-                09/2018 &nbsp I started my Ph.D. training at UCLA. 
-              </p>
-            </td>
-          </tr>
-        </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle"><heading>Publications</heading></td>            
           </tr>
 
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">               
+                <img src='images/coi.jpg' width="160" style="padding-top: 10%;">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://opg.optica.org/optica/fulltext.cfm?uri=optica-12-1-113&id=567132">
+                <papertitle>Computational optical imaging: on the convergence of physical and digital layers</papertitle>
+              </a>
+              <br>
+              <strong>Zhaoqiang Wang</strong>,
+              <a href="https://www.eee.hku.hk/~evanpeng/">Yifan Peng</a>,
+              <a href="https://www.luvision.net/">Lu Fang</a>,
+              <a href="https://www.iopticslab.seas.ucla.edu/">Liang Gao</a>
+              <br>
+              <em>Optica</em>, 2025
+              <p></p>
+              <p>
+                The emergence of computational optical imaging has blurred the boundary between imaging hardware and algorithm. We reviewed the vast landscape of this field and highlighted the synergic and complementary roles of optics and computation in modern imaging systems. 
+              </p>
+            </td>
+          </tr>          
           
           <tr onmouseout="slim_stop()" onmouseover="slim_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -105,27 +103,34 @@
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://www.biorxiv.org/content/10.1101/2024.03.23.586416v1.abstract">
+              <a href="https://www.biorxiv.org/content/10.1101/2024.03.23.586416v2">
                 <papertitle>Kilohertz volumetric imaging of in-vivo dynamics using squeezed light field microscopy</papertitle>
               </a>
               <br>
               <strong>Zhaoqiang Wang</strong>,
               Ruixuan Zhao,
               <a href="https://www.bbe.caltech.edu/people/daniel-wagenaar">Daniel A Wagenaar</a>,
+              Diego Espino,
+              Liron Sheintuch,
+              Ohr Benshlomo,
               Wenjun Kang,
               Calvin K. Lee,
               William C. Schmidt,
               Aryan Pammar,
               Enbo Zhu,
+              Jing Wang,
               <a href="https://wonglab.seas.ucla.edu/">Gerard C.L. Wong</a>,
-              Rongguang Liang,
+              <a href="https://www.optics.arizona.edu/person/rongguang-liang">Rongguang Liang</a>,
+              <a href="https://golshanilab.neurology.ucla.edu/">Peyman Golshani</a>,
               <a href="http://www.hsiailab.com/index.html">Tzung K. Hsiai</a>,
               <a href="https://www.iopticslab.seas.ucla.edu/">Liang Gao</a>              
               <br>
-              <em>bioRxiv</em>, 2024
+              <em>bioRxiv</em>, 2024 | <a href="https://aaronzq.github.io/SLIM/">Project page</a> | <a href="https://github.com/aaronzq/SLIM">Code</a>
+              <br>
+              SPIE Photonics West 2025 <award>Best Presentation Award</award> | Rice/BCM Next-Gen Comp. Bio-Imaging <award>Best Poster Award</award>
               <p></p>
               <p>
-                We engineered the light field microscopy with dove prisms and anamorphic lens to exceed <strong>kilohertz volumetric frame rate</strong> for fluorescence detection. We demonstrated accurate tracking of blood cells in zebrafish larvae and detection of neural voltage spikes in leech ganglion. 
+                We engineered the light field microscopy with dove prisms and anamorphic lens to exceed <strong>kilohertz volumetric frame rate</strong> for fluorescence detection. We demonstrated accurate tracking of blood cells in zebrafish larvae and detection of neural voltage spikes in leech ganglion and mouse hippocampus. 
               </p>
             </td>
           </tr>
@@ -239,10 +244,10 @@
               <a href="http://www.hsiailab.com/index.html">Tzung K. Hsiai</a>,
               <a href="https://scholar.google.com/citations?hl=en&user=gZ-U8XEAAAAJ&view_op=list_works&sortby=pubdate">Peng Fei</a>              
               <br>
-              <em>Nature Methods</em>, 2021
+              <em>Nature Methods</em>, 2021 | <a href="https://github.com/feilab-hust/VCD-Net">Code</a> | <a href="https://www.nature.com/articles/s41592-021-01151-1">NM News & Views</a> | <a href="https://samueli.ucla.edu/ucla-researchers-use-ai-to-show-multidimensional-imaging-of-biological-processes/">UCLA Samueli Newsroom</a>
               <p></p>
               <p>
-                We trained a convolutional neural network to reconstruct 3D image stacks from raw measurements of light field microscope (LFM). It brings higher spatial resolution, less artifacts and higher processing throughput to LFM, without sacrificing the high speed. 
+                We trained a convolutional neural network to reconstruct 3D image stacks from raw measurements of light field microscope (LFM). It brings higher spatial resolution, less artifacts and higher processing throughput to LFM, without sacrificing the high speed acquisiton capability. 
               </p>
             </td>
           </tr>
